# Note: This crate must be built using do.sh

[package]
name = "serum-pool"
version = "0.1.0"
description = "Solana pool spec"
edition = "2018"

[features]
no-entrypoint = []
program = ["spl-token/no-entrypoint"]

[dependencies]
serum-pool-schema = { version = "0.1.0", path = "./schema", default-features = false }
arrayref = "0.3.6"
solana-program = "1.4.4"
spl-token = { version = "3.0.0", default-features = false }
thiserror = "1.0.20"
zerocopy = "0.3.0"
bytemuck = "1.4.1"
slice-of-array = "0.2.1"
borsh = "0.7.1"
anyhow = { version = "1.0.33", default-features = false }
hex = "0.4.2"
base64 = "0.13.0"

[lib]
name = "serum_pool"
crate-type = ["cdylib", "lib"]
