# Note: This crate must be built using do.sh

[package]
name = "serum-pool-simple"
version = "0.1.0"
description = "Simple serum pool"
edition = "2018"

[features]
no-entrypoint = []
program = [
    "serum-pool/program"
]

[dependencies]
solana-program = { version = "1.4.4", default-features = false, optional = true }
serum-pool = { version = "0.1.0", path = "../..", default-features = false }

[lib]
name = "serum_pool_examples_simple"
crate-type = ["cdylib", "lib"]
